# cooperative_computing

./: README.md  index.html.1  index.html.2  index.html.3  index.html.4
Compiler/: CMakeLists.txt  Readme.txt  extract_onnx.py  extract_onnx_lib.py  extract_runcut_onnx.py  main.cpp  rename_onnx.py  run.sh
Compiler/include/: graph.h  partition.h
Compiler/include/Device/: Device.h  Licheepi.h
Compiler/lib/: graph.cpp  partition.cpp
Compiler/lib/Device/: Licheepi.cpp
Compiler_python/: README.md  extract_json_lib.py  flatc  run.sh  schema.fbs
Compiler_python/net/: partition_main.py
New_Compiler/: .gitignore  CMakeLists.txt  CoComputingCompiler  Readme.md  Readme.txt  config.json  cpuCutInstruction.txt  cpuCutInstructionlast.txt  extract_onnx.py  extract_onnx_lib.py  extract_runcut_onnx.py  instr_0905.txt  instr_modified.txt  instr_original.txt  main.cpp  npuCutInstruction.txt  other_subgraphs_final.txt  other_subgraphs_final_2.txt  other_subgraphs_final_3.txt  partition.cpp.txt  predecessor.txt  predecessor_final.txt  predecessor_final_2.txt  predecessor_final_3.txt  run.sh  scc.txt  shape_inf.py  shape_info.txt  subgraphs_1.txt  subgraphs_2.txt  subgraphs_3.txt  subgraphs_final.txt  subgraphs_final_2.txt  subgraphs_final_3.txt  subgraphs_ios.txt  submodel1.h5  submodel2.h5  successor.txt  successor_final.txt  successor_final_2.txt  (+5 more)
New_Compiler/h5_decompose/h5_decompose/: attn_clip_value.json  clip_value_all.json  conv_shortcut_clip_value.json  diffusion_decompose.ipynb  down_sample_clip_value.json  ff_clip_value.json  proj_clip_value.json  res_clip_value.json  test_keras.py  up_sample_clip_value.json
New_Compiler/h5_decompose/h5_decompose/stable_diffusion_tf/: bk_sdm_base.py  bk_sdm_tiny.py  bk_sdm_tiny_lcm.py  diffusion_model.py  layers.py  stable_diffusion.py
New_Compiler/include/: graph.h  partition.h
New_Compiler/include/Device/: Device.h  Licheepi.h
New_Compiler/lib/: graph.cpp  partition.cpp  structures.cpp
New_Compiler/lib/Device/: Device.cpp  Licheepi.cpp
New_Compiler/net/: partition_main.py  subgraphs_ios.txt
New_Compiler/net/lib/: __init__.py  graph.py  partion.py
New_Compiler/net/lib/Device/: device.py
New_Compiler/tools/: cpu_data_gen.py  gen_code.cpp  npu_data_gen.py
New_Compiler/tools/encoder_unet/: bintonpz.py  gen_sample.cpp  main_final_with_schedule.c  run.sh  runcut.sh  txttonpzbin.py
Tools/: cpu_data_gen.py  modify_model_c.py  npu_data_gen.py  shape_inference.py
Tools/onnx2tflite/: comp.py  convert_onnx_to_tflite.py  io_mapping.txt  (+3 more)
case/: readme.md
case/sd/tf/encoder/: CMakeLists.txt  encoder.cpp  run.sh
case1/: gen_exe.sh  run.sh  total.txt
inference/: gen_images.sh  images_MPS_COMP.py  inference_fp32_onnx_final.py  inference_onnx.py  inference_onnx_pca_auto_v2.py  inference_pca.py  model_inference.py  model_inference_multiple_output.py  prompts.txt  quant.py  readme.md  single_vs_multiple_onnx_v1.py  single_vs_multiple_onnx_v2.py
(+57 files in other folders)
